# voxvm

./: '  .gitignore  Cargo.toml  LICENSE  README  README.md  changelog.md  todo.md
nconfigs/: test.toml
nconfigs/libs/: libtestfr.c
src/: assembly.rs  callstack.rs  defnative.rs  exceptions.rs  fileformats.rs  func_ops.rs  gc.rs  heap.rs  main.rs  misclib.rs  native.rs  nativefiles.rs  nativenet.rs  registers.rs  stack.rs  tables.rs  vm.rs
tools/: hexwriter.py  input.nvs  input.vvs  input3.vvs  nvas.py  nvb_writer.py  program.vvb  program3.vve  program_asm.vvr
