[package]
name = "voxvm"
version = "0.8.2"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
maplit = "1.0.2"
regex = "1.11.1"
rand = "0.9.1"
sysinfo = "0.35.2"
libloading = "0.8.9"
toml = "0.9.8"
